# ospl-demo-tempsensor

./: .gitignore  CMakeLists.txt  README.md  cross-aarch64.cmake  defines.h  implementation.cpp  implementation.h  main.cpp
Simulation/: DDSPublisherSim.cpp  DDSPublisherSim.h  ScenarioSimulator.cpp  ScenarioSimulator.h
cmake/: FindOpenSplice.cmake
handlers/: DDSHandler.cpp  DDSHandler.h  DDSInboxHandler.cpp  DDSInboxHandler.h  DDSListenerHandler.cpp  DDSListenerHandler.h
idlopenslice/: Ambience.cpp  Ambience.h  AmbienceSplDcps.cpp  AmbienceSplDcps.h  Ambience_DCPS.hpp  Appearance.cpp  Appearance.h  AppearanceSplDcps.cpp  AppearanceSplDcps.h  Appearance_DCPS.hpp  ChangeLog.cpp  ChangeLog.h  ChangeLogSplDcps.cpp  ChangeLogSplDcps.h  ChangeLog_DCPS.hpp  Commons.cpp  Commons.h  CommonsSplDcps.cpp  CommonsSplDcps.h  Commons_DCPS.hpp  Configuration.h  ConfigurationSplDcps.cpp  ConfigurationSplDcps.h  Configuration_DCPS.hpp  ExternalScheduling.cpp  ExternalScheduling.h  ExternalSchedulingSplDcps.cpp  ExternalSchedulingSplDcps.h  ExternalScheduling_DCPS.hpp  Face.h  FaceSplDcps.cpp  FaceSplDcps.h  Face_DCPS.hpp  Floor.h  FloorSplDcps.cpp  FloorSplDcps.h  Floor_DCPS.hpp  House.h  HouseSplDcps.cpp  HouseSplDcps.h  (+39 more)
sensiboManager/: SensiboAcState.cpp  SensiboAcState.h  SensiboDevice.cpp  SensiboDevice.h  SensiboManager.cpp  SensiboManager.h  SensiboParser.cpp  SensiboParser.h  SensiboSky.cpp  SensiboSky.h  SensiboSkyAcState.cpp  SensiboSkyAcState.h
